fpp_analysis/src/test/enums/undef_constant_1.ref.txt
error: undefined symbol
 --> [ local path prefix ]/enums/undef_constant_1.fpp:1:14
  |
1 | enum E { X = a }
  |              ^ cannot find constant `a` in scope

